*Fri Nov  2 2012 Henri Gavin <.> 0.20100105
- small edits to comments in main.c

*Tue Oct 30 2012 Henri Gavin <.> 0.20100105
- Cleaned up and documented Newton-Raphson code.  
- Improved documentation in the Numerical Details section.
- Set internal force data to zero at start of each load case. 

*Mon Oct 29 2012 Henri Gavin <.> 0.20100105
- Improving documentation on numerical details.

*Wed Oct 24 2012 Henri Gavin <.> 0.20100105
- Investigated Powell-Symmetric-Broyden update of secant stiffness matrix. 
This quasi-Newton method does not seem to help very much.  In fact, in all
tests convergence with the Powell-Symmetric-Broyden update is slower.  In some
cases the solution does not converge.   So, Frame3DD is sticking with the
standard full secant update method.   A function for Powell-Symmetric-Broyden
updating is now in HPGmatrix.c, for possible future use.  

*Fri Oct 19 2012 Henri Gavin <.> 0.20100105
- Terms (1,1), (7,7), (1,7) and (7,1) of Kg should be zero!

*Mon Oct 15 2012 Henri Gavin <.> 0.20100105
- re-write of matrix-solving routines in HPGmatrix.c to solve partitioned
systems of equations: ldl_dcmp_pm and ldl_mprv_pm.  
- associated re-write of sections of main.c dealing with solving the
equations.
- associated edits of user-manual.doc
- associated correction of the computation of reaction forces ...
Frame3DD now passes the "patch" test.
- rename matrix.c , matrix.h to HPGmatrix.c , HPGmatrix.h
- rename hpgUtils.c , hpgUtils.h to HPGutil.c , HPGutil.h


*Tue Oct  2 2012 Henri Gavin <.> 0.20100105
- delete: matrix.c hpgUtils.c nrutil.c  (matrix.c and hpgUtls.c were GPL)
- add:   HPGmatrix.c HPGutil.c NRutil.c (none of these are GPL)
- new functions in HPGmatrix.c for solving partitioned systems of equations.
via LDL' decomposition.   These functions will be used in a forthcoming change
in order to compute reaction forces directly from the equilibrium matrices.
- this update is the first in a sequence of re-writes of Frame3DD.
